2009-07-01  higepon  <higepon@users.sourceforge.jp>

        * Rewrote cons* in C++ for performance.

        * Equivalent.h : Added fast equal?.
          Efficient Nondestructive Equality Checking for Trees and Graphs
          Michael D. Adams and R. Kent Dybvig
          ICFP 2008
2009-06-30  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/ffi.ss: Added new FFI documents.

2009-06-29  higepon  <higepon@users.sourceforge.jp>

        * FFIProcedures.cpp : added shared-errno.

        * lib/mosh/ffi.ss : Use pointer object for arguments and functions.

2009-06-28  higepon  <higepon@users.sourceforge.jp>

        * lib/srfi/%3a27/random.ss (mrg32k3a-state-set): fixed length bug pointed out by mrc.mgg.

        * Addes following procedures.
          pointer?
          pointer->integer
          integer->pointer
          pointer-set-c-int8!
          pointer-set-c-int16!
          pointer-set-c-int32!
          pointer-set-c-int64!
          pointer-ref-c-uint8
          pointer-ref-c-uint16
          pointer-ref-c-uint32
          pointer-ref-c-uint64
          pointer-ref-c-int8
          pointer-ref-c-int16
          pointer-ref-c-int32
          pointer-ref-c-int64
          pointer-ref-c-signed-char
          pointer-ref-c-unsigned-char
          pointer-ref-c-signed-short
          pointer-ref-c-unsigned-short
          pointer-ref-c-signed-int
          pointer-ref-c-unsigned-int
          pointer-ref-c-signed-long
          pointer-ref-c-unsigned-long
          pointer-ref-c-signed-long-long
          pointer-ref-c-unsigned-long-long
          pointer-ref-c-float
          pointer-ref-c-double
          pointer-ref-c-pointer
          pointer-set-c-char!
          pointer-set-c-short!
          pointer-set-c-int!
          pointer-set-c-long!
          pointer-set-c-long-long!
          pointer-set-c-float!
          pointer-set-c-double!
          pointer-set-c-pointer!
          pointer-null
          pointer-null?
          pointer-diff