@@ -121,14 +121,14 @@ TEST_F(VMTest, StackTrace2) {
                  "\n"
                  " Stack trace:\n"
                  "    1. throw: <subr>\n"
-                 "    2. (raise c):  compiler-with-library.scm:889\n"
+                 "    2. (raise c):  compiler-with-library.scm:909\n"
                  "    3. sys-display: <subr>\n"
                  "    4. (a): <unknown location>\n"
                  "    5. (b): <unknown location>\n"
                  "    6. eval: <subr>\n"
-                 "    7. (dynamic-wind in body out):  compiler-with-library.scm:808\n"
-                 "    8. (dynamic-wind in body out):  compiler-with-library.scm:808\n"
-                 "    9. (dynamic-wind in body out):  compiler-with-library.scm:808\n"
+                 "    7. (dynamic-wind in body out):  compiler-with-library.scm:828\n"
+                 "    8. (dynamic-wind in body out):  compiler-with-library.scm:828\n"
+                 "    9. (dynamic-wind in body out):  compiler-with-library.scm:828\n"
                  "    10. (<top-level>): <unknown location>\n\n",
                  theVM_->getLastError().toString()->data().ascii_c_str());
 }
