@@ -1,5 +1,7 @@
 2009-07-01  higepon  <higepon@users.sourceforge.jp>
 
+        * library.scm (vector-map): Rewrote for performance.
+
         * Rewrote cons* in C++ for performance.
 
         * Equivalent.h : Added fast equal?.
